--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Куплю. Продам",
   "main": "./src/service/service.js",
   "scripts": {
-    "start": "node ./src/service/service.js --server",
+    "start": "node ./src/service/cli/server.js",
     "start-front-server": "nodemon ./src/express/express.js",
     "generate": "node ./src/service/service.js --generate",
     "test": "npm run eslint",
